# graphhansard

./: .gitignore  GRAPH_VISUALIZATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CLI.md  IMPLEMENTATION_SUMMARY_MP10_12_13.md  IMPLEMENTATION_SUMMARY_MP14_MP15_MP16.md  IMPLEMENTATION_SUMMARY_MP5_MP6_MP11.md  IMPLEMENTATION_SUMMARY_SECURITY_ACCESSIBILITY.md  INTERACTIVE_FEATURES.md  LEGAL_ETHICAL_FRAMEWORK_SUMMARY.md  LICENSE  README.md  UI_PREVIEW.md  pyproject.toml  requirements-gpu.txt  requirements.txt
.streamlit/: config.toml
benchmarks/: README.md  RESULTS.md  bench_dashboard_interaction.py  bench_dashboard_load.py  bench_entity_extraction.py  bench_graph_computation.py  bench_transcription.py  run_all.py
docs/: CLI_USAGE.md  SESSION_METADATA_GUIDE.md  SRD_v1.0.md  alias_resolution_api.md  bahamian_creole.md  code_review_neutrality_checklist.md  community_contributions.md  dashboard_features.md  data_export.md  data_provenance.md  entity_extraction.md  entity_knowledge_base_v1.md  graph_builder_guide.md  graph_visualization_guide.md  methodology.md  uptime_monitoring.md  validation_corpus.md
examples/: README.md  build_session_graph.py  sentiment_demo.py  session_metadata.json  transcribe_session.py  visualize_graph.py
golden_record/: aliases_index.json  mps.json
scripts/: README_VALIDATION.md  azure_gpu_process.py  batch_transcribe.py  demo_speaker_resolution.py  example_entity_extractor.py  example_resolver_usage.py  export_golden_record.py  fetch_session_metadata.py  generate_alias_index.py  review_submissions.py  submit_alias.py  validate_corpus.py
tests/: test_about_page.py  test_accessibility.py  test_alias_resolver.py  test_audio_quality.py  test_batch_transcribe.py  test_brain.py  test_brain_cli.py  test_cli_integration.py  test_contributions.py  test_coreference_resolution.py  test_creole_utils.py  test_dashboard.py  test_dashboard_filters.py  test_entity_extractor.py  test_entity_extractor_validation.py  test_error_resilience.py  (+21 more)
(+39 files in other folders)
